--- a/style.css
+++ b/style.css
@@ -1935,10 +1935,14 @@ body,
 .dot-list li i{
   font-size:5px;
   margin-top: 15px;
-  margin-right: 20px;
+  margin-right: 15px;
+  color: #00533a;
+}
+.fit-image img{
+  width: 100%;
 }
 .left-info ul{
-  margin-top: 20px;
+  margin-top: 10px;
   text-align: left;
 }
 .about-area .top-info .right-info {
@@ -5100,7 +5104,12 @@ footer .f-item.recent-post .single .meta i {
   -ms-transform: skewX(30deg);
   -o-transform: skewX(30deg);
 }
-
+.copyright p{
+  font-size: 16px;
+}
+.copyright a{
+  font-size: 16px;
+}
 /* ===================================
     # 404
 ====================================== */
